syntax = "proto3";

option go_package = "github.com/go-kit-demo/demo_pb";
package demo_pb;

service Greeter {
  // Unary RPC
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string greeting = 1;
}
